--- a/upload.html
+++ b/upload.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="container">
-        <form action="http://localhost:5000/uploader" method="POST" enctype="multipart/form-data">
+        <form action="http://127.0.0.1:5000/uploader" method="POST" enctype="multipart/form-data">
             <input type="file" name = "file" class="button-upload">
             <input type="submit">
         </form>
